# MCP_Agents

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ecosystem.config.js  generate_token.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: .gitkeep
frontend/: package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  Message.jsx
src/api/: __init__.py  api_server.py
src/common/: __init__.py  config.py  config.yaml  logger_config.py
src/mcp/: __init__.py  mcp_server.py
src/tools/: __init__.py  google_calendar_tool.py  notion_tool.py
src/ui/: index.html
src/ui/css/: style.css
src/ui/js/: main.js
tests/: __init__.py  test_api.py  test_prompt.md  test_tools.py
